# X1Coin

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  Makefile.am  README.md  SECURITY.md  bitcoins-auto.sh  configure.ac  index.html  libbitcoinsconsensus.pc.in  libx1coinconsensus.pc.in  submit.php
.tx/: config
build_msvc/: .gitignore  README.md  bitcoins.sln  bitcoins_config.h.in  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json  x1coin.sln  x1coin_config.h.in
contrib/: README.md  valgrind.supp
depends/: README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  bitcoins-conf.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multisig-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  tracing.md  (+4 more)
doc/man/: Makefile.am  bitcoins-cli.1  bitcoins-qt.1  bitcoins-tx.1  bitcoins-util.1  bitcoins-wallet.1  bitcoinsd.1  x1coin-cli.1  x1coin-qt.1  x1coin-tx.1  x1coin-util.1  x1coin-wallet.1  x1coind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  (+125 more)
(+1245 files in other folders)
