dist_man1_MANS=

if BUILD_BITCOINSD
  dist_man1_MANS+=bitcoinsd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoins-qt.1
endif

if BUILD_BITCOINS_CLI
  dist_man1_MANS+=bitcoins-cli.1
endif

if BUILD_BITCOINS_TX
  dist_man1_MANS+=bitcoins-tx.1
endif

if BUILD_BITCOINS_UTIL
  dist_man1_MANS+=bitcoins-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOINS_WALLET
  dist_man1_MANS+=bitcoins-wallet.1
endif
endif
