dist_man1_MANS=

if BUILD_X1COIND
  dist_man1_MANS+=x1coind.1
endif

if ENABLE_QT
  dist_man1_MANS+=x1coin-qt.1
endif

if BUILD_X1COIN_CLI
  dist_man1_MANS+=x1coin-cli.1
endif

if BUILD_X1COIN_TX
  dist_man1_MANS+=x1coin-tx.1
endif

if BUILD_X1COIN_UTIL
  dist_man1_MANS+=x1coin-util.1
endif

if ENABLE_WALLET
if BUILD_X1COIN_WALLET
  dist_man1_MANS+=x1coin-wallet.1
endif
endif
